# GLTemplate

./: .gitignore  CMakeLists.txt  ThirdParty.cmake
Assets/Models/: sibenik-cathedral-vray.mtl
GLTemplate/: CMakeLists.txt
GLTemplate/include/: CameraController.h  SceneGraph.h  SharedAsset.h  Stopwatch.h  Transform.h  VectorMath.h
GLTemplate/include/Application/: Application.h  Delegate.h  Delegates.h  ImguiWrapper.h  Keyboard.h  Log.h  ValueWithDelegate.h  Window.h
GLTemplate/include/Application/GL/: GLWindow.h  ImguiWrapperGL.h
GLTemplate/include/Base/: Algorithm.h  ConstexprMap.h  Enum.h  Log.h  NonCopyable.h  PixelFormat.h  Rectangle.h  Stopwatch.h  StringUtil.h  System.h  UUID2.h
GLTemplate/include/Components/: IndexedGeometry.h  Material.h  Mesh.h  Shader.h  Texture.h  Texture2D.h
GLTemplate/include/Rendering/: BackendIndexedGeometry.h  BackendTexture.h  Buffer.h  Context.h  Framebuffer.h  GpuIndexedGeometry.h  GpuResource.h  GpuResourceBackend.h  GpuShader.h  GpuTexture.h  IndexedGeometry.h  IndexedMesh.h  Material.h  Mesh.h  PipelineState.h  RenderObject.h  RenderTarget.h  RenderTask.h  Renderer.h  Shader.h  Texture.h  Texture2D.h  Types.h  UniformCollection.h  Util.h
GLTemplate/include/Rendering/GL/: GL.h  GLIndexedGeometry.h  GLResourceBackend.h  GLSLShader.h  GLSLShaderParser.h  GLShader.h  GLShaderLoader.h  GLTexture2D.h  GLTools.h  GLTypeConversion.h
GLTemplate/include/Rendering/Types/: AttributeFormat.h  DataType.h  TextureFormat.h  UniformType.h
GLTemplate/include/Rendering/internal/: BaseObject.h
GLTemplate/src/: CameraController.cpp  SharedAsset.cpp  main.cpp
GLTemplate/src/Application/: Application.cpp  ApplicationImpl.cpp  ApplicationImpl.h  KeyboardImpl.cpp  KeyboardImpl.h  Window.cpp  WindowImpl.cpp  WindowImpl.h
GLTemplate/src/Application/GL/: GLShader.cpp  GLWindow.cpp  ImguiWrapperGL.cpp
GLTemplate/src/Application/GLFW/: Context.cpp  Context.h
GLTemplate/src/Base/: Stopwatch.cpp  StringUtil.cpp  UUID.cpp
GLTemplate/src/Components/: Camera.cpp  IndexedGeometry.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp
GLTemplate/src/Rendering/: Camera.cpp  GLSLShaderLoader.cpp  GpuResource.cpp  GpuResourceBackend.cpp  IndexedGeometry.cpp  Mesh.cpp  Renderer.cpp
GLTemplate/src/Rendering/GL/: BufferImpl.cpp  BufferImpl.h  BufferTypes.h  ContextImpl.cpp  ContextImpl.h  FramebufferImpl.cpp  FramebufferImpl.h  GLIndexedGeometry.cpp  GLResourceBackend.cpp  GLSLShaderParser.cpp  GLShader.cpp  IndexedMeshImpl.cpp  IndexedMeshImpl.h  PipelineStateImpl.cpp  PipelineStateImpl.h  RenderObjectImpl.cpp  RenderObjectImpl.h  RenderTaskImpl.cpp  RenderTaskImpl.h  ShaderImpl.cpp  ShaderImpl.h  Texture2DImpl.cpp  Texture2DImpl.h  UniformCollectionImpl.cpp  UniformCollectionImpl.h
GLTemplate/src/Rendering/GL/internal/: GLDebugMessageCallback.cpp  GLDebugMessageCallback.h  GLTypes.h
GLTemplate/src/Rendering/internal/: BaseObject.cpp
cmake/: Conan.cmake  ShaderCompiler.cmake
example/: CMakeLists.txt
example/src/: main.cpp
include/: CameraController.h  GL.cpp  GL.h  GLSLShader.h  GLSLShaderLoader.h  GpuResource.h  Input.h  Material.h  Mesh.h  Renderer.h  SceneGraphComponent.h  Shader.h  SharedAsset.h  Stopwatch.h  Texture.h  Transform.h  UI.h
include/Application/: Delegates.h  Input.h  UI.h  Window.h
include/Application/GLFW/: glfwwindow.h
include/Rendering/: Camera.h  GpuResourceBackend.h  Material.h  Mesh.h  RenderTarget.h  Renderer.h  Texture.h
include/Rendering/GL/: GL.h  GLIndexedGeometry.h
src/: Camera.cpp  CameraController.cpp  GLSLShader.cpp  GLSLShaderLoader.cpp  GpuResource.cpp  GpuResourceBackend.cpp  Input.cpp  Mesh.cpp  Renderer.cpp  SharedAsset.cpp  Transform.cpp  UI.cpp  main.cpp
src/Application/: Input.cpp  UI.cpp  Window.cpp
src/Application/GLFW/: GLFWWindow.cpp
src/Rendering/: GLSLShader.cpp  GLSLShaderLoader.cpp  GpuResource.cpp  GpuResourceBackend.cpp  Mesh.cpp  Renderer.cpp
src/Rendering/GL/: GLIndexedGeometry.cpp
test/: CMakeLists.txt
test/src/: DelegateTests.cpp  GLTests.cpp  Tests_Delegate.cpp  Tests_UUID.cpp  Tests_ValueWithDelegate.cpp  TextureTests.cpp
